--- a/Website_for_Jokes/Jokewebsite.html
+++ b/Website_for_Jokes/Jokewebsite.html
@@ -17,9 +17,9 @@
 	<main>
 	<nav id="Tab-links">
 		<ul>
-		<li><a href="history-of-jokes">History of Jokes</a></li>
-		<li><a href="What-is-Humor?">What is Humor?</a></li>
-		<li><a href="Dark Humor">Dark Humor</a></li>
+		<li><a href="history.html">History of Jokes</a></li>
+		<li><a href="whatishumor.html">What is Humor?</a></li>
+		<li><a href="darkhumor.html">Dark Humor</a></li>
 		<li><a href="Clean Humor">Clean Humor</a></li>
 		<li><a href="We-are-better-than-everyone-else">Why We Are The Best</a></li>
 
