--- a/Website_for_Jokes/Jokewebsite.html
+++ b/Website_for_Jokes/Jokewebsite.html
@@ -28,7 +28,7 @@
 </header>
 <h2 class="type-and-history">Jokes: Types and History</h2>
 
-<p> This is a test for the linking of my CSS file sheet.
+<p> What we hope to establish and build upon is a better understanding and appreciation for humor in all its forms.
 <figure class="Laugh-cry-emoji">
 	<img src="img/laughingimage.png" alt="laughing emoji">
 </figure>
